--- a/landing_Page/style.css
+++ b/landing_Page/style.css
@@ -1265,13 +1265,7 @@ li a:not(.slp-btn):hover,
   }
 }
 
-@media (min-width: 768px) {
-  .quotes-carousel__header {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
+
 
 @media (min-width: 768px) {
   .case-study-quote {
@@ -1432,5 +1426,122 @@ li a:not(.slp-btn):hover,
 @media (min-width: 829px){
 .footer .footer__cta {
     align-items: center;
+}
+}
+
+/* responsive moblie */
+/* 
+ @media (min-width: 640px){ 
+.container {
+    max-width: 95%;
+}
+} */
+@media (max-width: 768px){
+.homepage_container {
+    margin-top: 100px;
+    text-align: left;
+}
+}
+@media (max-width: 768px){
+.slp-col-md-6, 
+.slp-col-md {
+    width: inherit;
+    max-width: 100%;
+}
+}
+@media (max-width: 768px){
+.homepage-hero__title-column {
+    margin-right: 0;
+    margin-bottom: 24px;
+}
+}
+@media (max-width: 768px){
+.homepage_container .slp-btn {
+    width: 100%;
+    justify-content: center;
+    margin-top: 8px;
+}
+}
+.homepage-hero_media-column {
+  margin: 0 auto;
+  height: 100%;
+  width: 100%;
+}
+@media (max-width: 768px){
+.card p.desktop {
+    display: none;
+}
+}
+.card p.mobile{
+  display: none;
+  margin-top: 8px;
+}
+
+@media (max-width: 768px){
+.card p.mobile {
+    display: block;
+}
+}
+@media (min-width: 768px){
+.progressbar-container {
+    margin: 16px 0;
+}
+}
+@media (max-width: 768px){
+.customer-logos__trusted-by {
+    width: 100%;
+    text-align: center;
+    margin-top: 0;
+}
+}
+@media (max-width: 768px){
+.customer-logos__companies a {
+    width: 100px;
+}
+}
+.customer-logos__companies a {
+  width: 120px; 
+  margin: 6px;
+} 
+
+@media (min-width: 768px){
+.quotes-carousel__header {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+}
+@media (max-width: 768px){
+.solutions-container__container {
+    padding-left: 16px;
+    padding-right: 16px;
+}
+}
+@media (max-width: 768px){
+.solutions-container__header {
+    margin-left: 15px ;
+    margin-right: 40px;
+}
+}
+@media (max-width: 768px){
+.solutions-container img {
+    border-radius: 0 0 100px 0;
+}
+}
+@media (max-width: 768px){
+.solutions-container__header p {
+    float: unset;
+    width: unset;
+}
+}
+@media (max-width: 768px){
+.solutions-block__container {
+    padding-left: 6px;
+    padding-right: 6px;
+}
+}
+@media (max-width: 768px){
+.solutions-block h2{
+    margin-bottom: 48px;
 }
 }
